--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="bg-blue-400 border-orange-700 border-b-2">
-      <div class="flex justify-between container mx-auto py-3">
+    <div
+      class="bg-blue-400 md:bg-red-400 lg:bg-orange-400 border-orange-700 border-b-2"
+    >
+      <div class="sm:flex justify-between container mx-auto py-3">
         <h1 class="text-xl font-normal text-center text-white">Hello world</h1>
-        <ul class="flex text-white space-x-4 text-xl">
+        <ul class="flex text-white space-x-4 text-xl mt-5 sm:mt-0">
           <li><a href="">About</a></li>
           <li><a href="">Portofolio</a></li>
+          <li><a href="">Menu 1</a></li>
+          <li><a href="">Menu 2</a></li>
+          <li><a href="">Menu 3</a></li>
         </ul>
       </div>
+    </div>
+    <div
+      class="w-2/4 border-2 mx-auto my-5 min-h-20 p-5 bg-gray-300 rounded-xl"
+    >
+      <h3 class="text-center mb-3 text-2xl font-bold">Halo</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quia,
+        enim odit similique eaque aut. Eaque a maiores, eveniet odio deserunt
+        exercitationem temporibus, et debitis commodi id ea neque labore?
+      </p>
     </div>
   </body>
 </html>
