--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       class="bg-blue-400 md:bg-red-400 lg:bg-orange-400 border-orange-700 border-b-2"
     >
       <div class="sm:flex justify-between container mx-auto py-3">
-        <h1 class="text-xl font-normal text-center text-white">Hello world</h1>
+        <h1 class="text-xl font-bold text-center text-white">Hello world</h1>
         <ul class="flex text-white space-x-4 text-xl mt-5 sm:mt-0">
           <li><a href="">About</a></li>
           <li><a href="">Portofolio</a></li>
