--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <div
-      class="bg-blue-400 md:bg-red-400 lg:bg-orange-400 border-orange-700 border-b-2"
+      class="bg-sky-600 md:bg-purple-800 lg:bg-fuchsia-600 border-orange-700 border-b-2"
     >
       <div class="sm:flex justify-between container mx-auto py-3">
-        <h1 class="text-xl font-bold text-center text-white">Hello world</h1>
+        <h1 class="text-xl font-bold text-center text-white">Tailwind</h1>
         <ul class="flex text-white space-x-4 text-xl mt-5 sm:mt-0">
           <li><a href="">About</a></li>
           <li><a href="">Portofolio</a></li>
@@ -29,6 +29,42 @@
         enim odit similique eaque aut. Eaque a maiores, eveniet odio deserunt
         exercitationem temporibus, et debitis commodi id ea neque labore?
       </p>
+    </div>
+
+    <h3 class="text-3xl font-bold text-center">Portofolio</h3>
+    <div
+      class="w-4/6 mx-auto my-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2 text-4xl"
+    >
+      <divd
+        class="h-20 border-2 border-gray-400 flex justify-center items-center bg-gray-300 rounded-md"
+      >
+        01
+      </divd>
+      <div
+        class="h-20 border-2 border-gray-400 flex justify-center items-center bg-gray-300 rounded-md"
+      >
+        02
+      </div>
+      <div
+        class="h-20 border-2 border-gray-400 flex justify-center items-center bg-gray-300 rounded-md"
+      >
+        03
+      </div>
+      <div
+        class="h-20 border-2 border-gray-400 flex justify-center items-center bg-gray-300 rounded-md"
+      >
+        04
+      </div>
+      <div
+        class="h-20 border-2 border-gray-400 flex justify-center items-center bg-gray-300 rounded-md"
+      >
+        05
+      </div>
+      <div
+        class="h-20 border-2 border-gray-400 flex justify-center items-center bg-gray-300 rounded-md"
+      >
+        06
+      </div>
     </div>
   </body>
 </html>
