--- a/index.html
+++ b/index.html
@@ -6,23 +6,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div
-      class="bg-sky-600 md:bg-purple-800 lg:bg-fuchsia-600 border-orange-700 border-b-2"
-    >
-      <div class="sm:flex justify-between container mx-auto py-3">
+    <div class="bg-sky-600 md:bg-purple-800 lg:bg-fuchsia-600">
+      <div class="sm:flex justify-between mx-10 py-3">
         <h1 class="text-xl font-bold text-center text-white">Tailwind</h1>
         <ul class="flex text-white space-x-4 text-xl mt-5 sm:mt-0">
           <li><a href="">About</a></li>
           <li><a href="">Portofolio</a></li>
-          <li><a href="">Menu 1</a></li>
-          <li><a href="">Menu 2</a></li>
-          <li><a href="">Menu 3</a></li>
+          <li><a href="">Contanct</a></li>
         </ul>
       </div>
     </div>
-    <div
-      class="w-2/4 border-2 mx-auto my-5 min-h-20 p-5 bg-gray-300 rounded-xl"
-    >
+    <div class="w-2/4 mx-auto my-5 min-h-20 p-5 bg-gray-300 rounded-xl">
       <h3 class="text-center mb-3 text-2xl font-bold">Halo</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quia,
@@ -33,7 +27,7 @@
 
     <h3 class="text-3xl font-bold text-center">Portofolio</h3>
     <div
-      class="w-4/6 mx-auto my-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2 text-4xl"
+      class="w-4/6 mx-auto my-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 text-4xl"
     >
       <divd
         class="h-20 border-2 border-gray-400 flex justify-center items-center bg-gray-300 rounded-md"
