--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="flex text-white space-x-4 text-xl mt-5 sm:mt-0">
           <li><a href="">About</a></li>
           <li><a href="">Portofolio</a></li>
-          <li><a href="">Contanct</a></li>
+          <li><a href="">Contact</a></li>
         </ul>
       </div>
     </div>
